force-app/main/default/objects/ClaytonSettings__c/ClaytonSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Clayton Settings</description>
    <label>ClaytonSettings</label>
</CustomObject>