force-app/main/default/objects/ClaytonSettings__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Clayton Account Id</description>
    <externalId>true</externalId>
    <label>AccountId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>