force-app/main/default/objects/ClaytonSettings__c/fields/TargetBranch__c.field-meta.xml
<CustomField>
    <fullName>TargetBranch__c</fullName>
    <defaultValue>&quot;master&quot;</defaultValue>
    <description>Default target branch (e.g. master)</description>
    <inlineHelpText>Default target branch (e.g. master)</inlineHelpText>
    <label>Target Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>