force-app/main/default/objects/ClaytonSettings__c/fields/Trigger_Automatic_Scans__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Automatic_Scans__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger Automatic Scans</label>
    <type>Checkbox</type>
</CustomField>