force-app/main/default/objects/ClaytonSettings__c/fields/WaitingTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>WaitingTimeMinutes__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Clayton Scan Flow will use this number as waiting time between scan status check iterations</description>
    <inlineHelpText>Clayton Scan Flow will use this number as waiting time between scan status check iterations</inlineHelpText>
    <label>Polling Waiting Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>