force-app/main/default/objects/ClaytonSettings__c/fields/WebhookSecret__c.field-meta.xml
<CustomField>
    <fullName>WebhookSecret__c</fullName>
    <description>Clayton uses this secret to encrypt message payload with HMAC-SHA256 and verify signature</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>